コインの自動生成+ゴール付近までの道にする。

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ RunGame/ProjectSettings/
 RunGame/Temp/
 RunGame/UserSettings/
 RunGame/Assets/Illust/
+RunGame/.vs/
+RunGame/Assets/Resources/
+RunGame/obj/
