--- a/RunGame/Assembly-CSharp.csproj
+++ b/RunGame/Assembly-CSharp.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Assets\Script\Item.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Free Stylized Skybox\ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.29f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
       <Private>False</Private>
