--- a/RunGame/Assembly-CSharp.csproj
+++ b/RunGame/Assembly-CSharp.csproj
@@ -60,11 +60,11 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.29f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Script\Move.cs" />
     <Compile Include="Assets\Script\ItemScale.cs" />
     <Compile Include="Assets\Script\Title.cs" />
     <Compile Include="Assets\Script\Item.cs" />
     <Compile Include="Assets\Script\StartButton.cs" />
+    <Compile Include="Assets\Script\Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Free Stylized Skybox\ReadMe.txt" />
