フォントの変更+finish時のテキストの位置の編集

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ RunGame/Assets/_TerrainAutoUpgrade.meta
 RunGame/Assets/Free Stylized Skybox.meta
 RunGame/Assets/_TerrainAutoUpgrade/
 RunGame/Assets/Free Stylized Skybox/
+RunGame/Assets/Font/
