BGM+効果音の追加

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ RunGame/Assets/Free Stylized Skybox.meta
 RunGame/Assets/_TerrainAutoUpgrade/
 RunGame/Assets/Free Stylized Skybox/
 RunGame/Assets/Font/
+RunGame/Assets/Music/
