アセットの変更

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ RunGame/Assets/_TerrainAutoUpgrade/
 RunGame/Assets/Free Stylized Skybox/
 RunGame/Assets/Font/
 RunGame/Assets/Music/
+RunGame/Assets/
